src/test/ui/pattern/bindings-after-at/default-binding-modes-both-sides-independent.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/default-binding-modes-both-sides-independent.rs:10:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/default-binding-modes-both-sides-independent.rs:28:17
   |
LL |     let ref a @ b = NotCopy;
   |         --------^
   |         |       |
   |         |       by-move pattern here
   |         by-ref pattern here

error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/default-binding-modes-both-sides-independent.rs:29:21
   |
LL |     let ref mut a @ b = NotCopy;
   |         ------------^
   |         |           |
   |         |           by-move pattern here
   |         by-ref pattern here

error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/default-binding-modes-both-sides-independent.rs:31:20
   |
LL |         Ok(ref a @ b) | Err(ref a @ b) => {}
   |            --------^        --------^
   |            |       |        |       |
   |            |       |        |       by-move pattern here
   |            |       |        by-ref pattern here
   |            |       by-move pattern here
   |            by-ref pattern here

error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/default-binding-modes-both-sides-independent.rs:35:17
   |
LL |         ref a @ b => {}
   |         --------^
   |         |       |
   |         |       by-move pattern here
   |         by-ref pattern here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0009`.
